# ChangeLog for dev-java/ant
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-java/ant/ChangeLog,v 1.47 2004/01/20 04:24:24 strider Exp $

  20 Jan 2004; Adrian Almenar <strider@gentoo.org> ant-1.6.0-r2.ebuild:
  Added ~x86 keyword.

  19 Jan 2004; Adrian Almenar <strider@gentoo.org> ant-1.6.0-r2.ebuild:
  Added amd64 keyword.

  18 Jan 2004; Adrian Almenar <strider@gentoo.org> files/1.6.0-r2/ant:
  Redirect java-config stderr output to /dev/null.

*ant-1.6.0-r2 (18 Jan 2004)

  18 Jan 2004; Adrian Almenar <strider@gentoo.org> ant-1.6.0-r2.ebuild:
  New method for building ant.

*ant-1.6.0 (25 Dec 2003)

  25 Dec 2003; Adrian Almenar <strider@gentoo.org> ant-1.6.0-r1.ebuild, ant-1.6.0.ebuild,
  files/1.6.0/ant:
  Updated ant to latest available version.

  20 Nov 2003; Adrian Almenar <strider@gentoo.org> ant-1.5.4-r1.ebuild:
  Moved to stable on all arches.

  20 Oct 2003; Adrian Almenar <strider@gentoo.org> ant-1.5.4-r1.ebuild,
  ant-1.5.4-r2.ebuild:
  This should fix bug #31545, Thanks Azarah for your help.

*ant-1.5.4-r2 (18 Oct 2003)

  18 Oct 2003; root <strider@gentoo.org> ant-1.5.4-r2.ebuild:
  New process to build ant from sources.

  18 Oct 2003; Adrian Almenar <strider@gentoo.org> ant-1.5.3-r5.ebuild,
  ant-1.5.4-r1.ebuild, ant-1.5.4.ebuild, files/1.5.3/ant, files/1.5.4/ant:
  Fixes bug #31006

*ant-1.5.4-r1 (13 Oct 2003)

  13 Oct 2003; Adrian Almenar <strider@gentoo.org> ant-1.5.4-r1.ebuild:
  Thanks to Gunnlaugur Thor Briem <gthb@hi.is>.
  Fix http://nagoya.apache.org/bugzilla/show_bug.cgi?id=14650
  (RPM package builds using rpm task failed with newer rpm versions
  such as the current stable one in portage)

*ant-1.5.4 (21 Sep 2003)

  21 Sep 2003; Adrian Almenar <strider@gentoo.org> ant-1.5.3-r3.ebuild,
  ant-1.5.3-r4.ebuild, ant-1.5.3-r5.ebuild, ant-1.5.4.ebuild, files/1.5.4/ant:
  Added but masked 1.5.4, updated ant ebuild so now can use bcel support if