@@ -1,7 +1,8 @@
-MD5 98241290f78b31e493e61b4cc5a9c58e ant-1.5.3-r5.ebuild 2947
+MD5 693d10c41066bd2f3b889f63ef882d3d ant-1.5.3-r5.ebuild 2941
 MD5 02f5cb2ace81c4d81cf18717fe245cf8 ant-1.6.0-r2.ebuild 1611
-MD5 cdba0dc1a042893f745a2fb4aeaa68ef ant-1.5.4-r1.ebuild 2884
-MD5 f9c9eed672b73de95fc6b19d5356bf5a ChangeLog 8882
+MD5 3e8b0d41c1f5f6afae75f899641fa8cd ant-1.5.4-r1.ebuild 2878
+MD5 7ca0fa176e6ae5dcab5f0087f600008e ant-1.6.0-r3.ebuild 1577
+MD5 c63e89e75e2a6ce3d7c3d6a7f20178b7 ChangeLog 9096
 MD5 a6ec7d7724fbd068ffb39b5be56134ed metadata.xml 157
 MD5 9796e31a633d28a00242c76325bb85b4 files/20ant 26
 MD5 4383441650437fec5622070e48e4324c files/build.sh-exit-fix.patch.gz 256
@@ -9,6 +10,7 @@ MD5 55ece9ccf573b244b3dff966839528c5 files/rpmbuild.patch.gz 1164
 MD5 0bf5f1d0dfa292c160318e00bb085a3e files/digest-ant-1.5.3-r5 76
 MD5 8d9dbdc8011a4b6ca468537db70bd4fb files/digest-ant-1.5.4-r1 74
 MD5 c2a3ad39a9e095b30108083f4002b384 files/digest-ant-1.6.0-r2 74
+MD5 c2a3ad39a9e095b30108083f4002b384 files/digest-ant-1.6.0-r3 74
 MD5 5841a69d6263fda47a60334730e1e0c0 files/1.6.0-r2/ant 2441
 MD5 4233391fc580c36c78c9f2bc2057327f files/1.5.3/ant 2208
 MD5 9cb067e9b0997856af50e7e117263596 files/1.5.3/1_6_backport-jdk142.patch.gz 916
