@@ -1,6 +1,6 @@
-# Copyright 1999-2003 Gentoo Technologies, Inc.
+# Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant/ant-1.5.3-r5.ebuild,v 1.5 2003/10/18 15:03:11 strider Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant/ant-1.5.3-r5.ebuild,v 1.6 2004/02/10 06:15:09 strider Exp $
 
 inherit java-pkg
 
@@ -10,7 +10,7 @@ SRC_URI="http://archive.apache.org/dist/ant/source/apache-${PN}-${PV}-1-src.tar.
 HOMEPAGE="http://ant.apache.org"
 LICENSE="Apache-1.1"
 SLOT="0"
-KEYWORDS="x86 ppc sparc alpha"
+KEYWORDS="x86 ppc sparc"
 DEPEND="virtual/glibc
 	>=virtual/jdk-1.3"
 RDEPEND=">=virtual/jdk-1.3
