@@ -1,0 +1,1 @@
+MD5 18aed5aa33951aa85c237fc4139bad6e apache-ant-1.6.0-src.tar.bz2 6217526
