@@ -1,6 +1,11 @@
 # ChangeLog for dev-java/ant
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-java/ant/ChangeLog,v 1.47 2004/01/20 04:24:24 strider Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-java/ant/ChangeLog,v 1.48 2004/02/10 06:15:09 strider Exp $
+
+*ant-1.6.0-r3 (10 Feb 2004)
+
+  10 Feb 2004; Adrian Almenar <strider@gentoo.org> ant-1.6.0-r3.ebuild:
+  Removed some USE flags for this package since people dont use them, and create a lot of bug reports about it.
 
   20 Jan 2004; Adrian Almenar <strider@gentoo.org> ant-1.6.0-r2.ebuild:
   Added ~x86 keyword.
